# qnn_sample_apps

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  conftest.py  desktop.ini  dll.json  executioner.json  models.json  pyproject.toml  requirements.in  requirements.txt  requirements_arm64.txt  requirements_win64.txt  setup.py
models/: README.md
models/cpu-deepseek-r1-distill-qwen-7b/: genai_config.json  inference_model.json  manifest.json
models/gemma-3-1b-it-ONNX-GQA/: README.md  config.json  generation_config.json  tokenizer_config.json
models/mistral-7b-instruct-v0.2-cpu-int4-rtn-block-32-acc-level-4/: genai_config.json  inference_model.json
models/qnn-deepseek-r1-distill-qwen-1.5b/: genai_config.json  inference_model.json  manifest.json
models/qnn-deepseek-r1-distill-qwen-14b/: LICENSE  README.md  genai_config.json  inference_model.json
models/qnn-deepseek-r1-distill-qwen-7b/: genai_config.json  inference_model.json  manifest.json
notebooks/: QNN_Quantization_x86.ipynb  sample_app_hrnet.ipynb  sample_app_hrnet_ARM64.ipynb  sample_app_hrnet_model_dynamic_quantization.ipynb  sample_app_hrnet_model_quantization.ipynb
notebooks/llm/: Build_Along_DeepSeek.ipynb  DeepSeek Build Along.ipynb  Deepseek_Greedy.ipynb  Deepseek_r1_7b_Optimized_Temperature_TopK-IOBinding.ipynb  Deepseek_r1_7b_Optimized_Temperature_TopK-InstantAutoReg.ipynb  Gemma-3_1B.ipynb  Mistral_7B_x86.ipynb  (+2 more)
scripts/: directory_information.txt
src/: model_loader.py  utils.py
tests/: conftest.py  test_model_inference.py  test_model_loader.py  test_module.py
(+33 files in other folders)
